--- a/experiences.html
+++ b/experiences.html
@@ -17,6 +17,15 @@
             </div>
         </div>
         <div class="nav-item">
+            <a class="back-link" href="experiences.html">Expériences</a>
+            <div class="nav-submenu">
+                <a href="#experience-api-arte">Job API</a>
+                <a href="#experience-projets-persos">Projets personnels</a>
+                <a href="#experience-cineclub">Ciné-club</a>
+                <a href="#experience-42">Piscine 42</a>
+            </div>
+        </div>
+        <div class="nav-item">
             <a class="back-link" href="formations.html">Formations</a>
             <div class="nav-submenu">
                 <a href="formations.html#bac">Bac STI2D</a>
@@ -31,7 +40,7 @@
     <section class="section-experiences detail-page with-fixed-nav">
         <div class="container">
             <div class="experiences-list">
-                                <article class="experience-card experience-detail" id="experience-api-arte">
+                <article class="experience-card experience-detail" id="experience-api-arte">
                     <h2>Job Étudiant - ARTE Strasbourg</h2>
                     <p class="experience-date">Août 2025 · Prestataire API Restauration</p>
                     <p><strong>Expérience professionnelle</strong></p>
@@ -188,9 +197,9 @@
 
                                 <article class="experience-card large" id="experience-42">
                     <div class="experience-images">
-                        <img class="exp-img top" src="image/42-campus.jpg" alt="Travail en pair-programming" />
-                        <img class="exp-img middle" src="image/42-group.jpg" alt="Campus 42" />
-                        <img class="exp-img bottom" src="image/42-code.jpg" alt="Session de code" />
+                        <img class="exp-img top" src="image/421.png" alt="Travail en pair-programming" />
+                        <img class="exp-img middle" src="image/422.jpeg" alt="Campus 42" />
+                        <img class="exp-img bottom" src="image/423.JPG" alt="Session de code" />
                     </div>
                     <div class="experience-content">
                         <h2>Piscine 42 - École 42 Mulhouse</h2>
