--- a/formations.html
+++ b/formations.html
@@ -23,8 +23,17 @@
                 <a href="experiences.html#experience-projets-persos">Projets personnels</a>
                 <a href="experiences.html#experience-cineclub">Ciné-club</a>
                 <a href="experiences.html#experience-42">Piscine 42</a>
-                <a href="formations.html#but2">Parcours Dev&nbsp;Cloud</a>
-                <a href="formations.html#objectifs">Objectifs futurs</a>
+            </div>
+        </div>
+        <div class="nav-item">
+            <a class="back-link" href="formations.html">Formations</a>
+            <div class="nav-submenu">
+                <a href="#bac">Bac STI2D</a>
+                <a href="#pix">Certification PIX</a>
+                <a href="#autoformation">Autoformation</a>
+                <a href="#but1">BUT RT 1</a>
+                <a href="#but2">Parcours Dev&nbsp;Cloud</a>
+                <a href="#objectifs">Objectifs futurs</a>
             </div>
         </div>
     </nav>
