--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body>
     <nav class="detail-page-nav">
         <div class="nav-item">
+            <a class="back-link" href="index.html">Accueil</a>
+            <div class="nav-submenu">
+                <a href="index.html#formation">Formation & diplômes</a>
+                <a href="index.html#experiences">Aperçu expériences</a>
+                <a href="index.html#competences">Compétences & contact</a>
+            </div>
+        </div>
+        <div class="nav-item">
             <a class="back-link" href="experiences.html">Expériences</a>
             <div class="nav-submenu">
                 <a href="experiences.html#experience-api-arte">Job API</a>
@@ -33,7 +41,7 @@
     <header class="presentation">
         <!-- Photo de profil circulaire -->
         <div class="photo">
-            <img src="image/image.png" alt="Photo de profil" />
+            <img src="image/pp.jpg" alt="Photo de profil" />
         </div>
         
         <!-- Section de texte avec boîte de présentation -->
@@ -41,12 +49,7 @@
             <div class="text-box">
                 <h1>Louis Erb</h1>
                 <p class="subtitle">Étudiant en 1re année de BUT Réseaux et Télécommunications</p>
-                <p><strong>Identité :</strong> Né le 31 octobre 2007 à Schiltigheim (Bas-Rhin) · Nationalité franco-suisse</p>
-                <p>Au départ il y a eu les jeux sur mon PC, et petit à petit j’ai développé un intérêt profond pour l’informatique. Mes stages en entreprise et les projets menés au lycée n’ont fait que confirmer cet intérêt.</p>
-                <p>L’école 42 a aussi attiré ma curiosité : j’y ai été admis après un mois intensif qui m’a laissé de solides bases en programmation.</p>
-                <p>Mais c’est l’IUT que j’ai choisi : j’y développe des compétences en administration réseau, développement web et cybersécurité.</p>
-                <p>Je suis également investi dans le milieu associatif.</p>
-                <p>Pour en découvrir plus je vous invite à parcourir ce site.</p>
+                <p>Je m'apple Louis ERB, je suis né le 31 octobre 2007 à Schiltigheim (Bas-Rhin), de nationalité franco-suisse. Au départ il y a eu les jeux sur mon PC, et petit à petit j’ai développé un véritable intérêt pour l’informatique. Mes stages en entreprise ainsi que les projets menés au lycée ont confirmé cette passion. L’école 42 a aussi attiré ma curiosité : j’y ai été admis après un mois intensif qui m’a donné de solides bases en programmation. J’ai finalement choisi l’IUT, où je développe des compétences en administration réseau, développement web et cybersécurité. Je suis également investi dans le milieu associatif. Pour en découvrir plus, je vous invite à explorer ce site.</p>
                 <p class="location-link">Basé à <a href="https://maps.google.com/?q=Mulhouse" target="_blank" rel="noreferrer">Mulhouse</a>, originaire de Strasbourg · Mobile dans tout le Grand Est</p>
             </div>
         </div>
@@ -167,9 +170,9 @@
                 <!-- Grande carte en haut -->
                 <article class="experience-card large">
                     <div class="experience-images">
-                        <img class="exp-img top" src="image/image.png" alt="Illustration expérience haut" />
-                        <img class="exp-img middle" src="image/image.png" alt="Illustration expérience milieu" />
-                        <img class="exp-img bottom" src="image/image.png" alt="Illustration expérience bas" />
+                        <img class="exp-img top" src="image/ARTE1.jpg" alt="Illustration expérience haut" />
+                        <img class="exp-img middle" src="image/ARTE2.png" alt="Illustration expérience milieu" />
+                        <img class="exp-img bottom" src="image/ARTE3.png" alt="Illustration expérience bas" />
                     </div>
                     <div class="experience-content">
                         <h3>Job Étudiant - API</h3>
