photo + nouvelle section

--- a/experiences.html
+++ b/experiences.html
@@ -10,19 +10,14 @@
     <nav class="detail-page-nav">
         <div class="nav-item">
             <a class="back-link" href="index.html">Accueil</a>
-            <div class="nav-submenu">
-                <a href="index.html#formation">Formation & diplômes</a>
-                <a href="index.html#experiences">Aperçu expériences</a>
-                <a href="index.html#competences">Compétences & contact</a>
-            </div>
         </div>
         <div class="nav-item">
             <a class="back-link" href="experiences.html">Expériences</a>
             <div class="nav-submenu">
-                <a href="#experience-api-arte">Job API</a>
+                <a href="#experience-api-arte">Job Étudiant</a>
                 <a href="#experience-projets-persos">Projets personnels</a>
                 <a href="#experience-cineclub">Ciné-club</a>
-                <a href="#experience-42">Piscine 42</a>
+                <a href="#experience-42">Piscine école 42</a>
             </div>
         </div>
         <div class="nav-item">
@@ -35,6 +30,9 @@
                 <a href="formations.html#but2">Parcours Dev&nbsp;Cloud</a>
                 <a href="formations.html#objectifs">Objectifs futurs</a>
             </div>
+        </div>
+        <div class="nav-item">
+            <a class="back-link" href="contact.html">Contact</a>
         </div>
     </nav>
     <section class="section-experiences detail-page with-fixed-nav">
@@ -50,7 +48,6 @@
                         <h3>Contexte professionnel</h3>
                         <p><strong>Entreprise :</strong> API Restauration, prestataire de restauration collective pour le siège d'ARTE.</p>
                         <p><strong>Lieu :</strong> 4 quai du Chanoine Winterer, 67000 Strasbourg – Siège européen de la chaîne franco-allemande.</p>
-                        <p><strong>Encadrement :</strong> Équipe de cuisine professionnelle dirigée par le responsable de production.</p>
                     </div>
 
                     <div class="detail-section" id="actions">
@@ -84,7 +81,7 @@
                         <p>J’ai appris à effectuer toutes ces tâches en respectant les consignes de sécurité et en appliquant les règles d’hygiène.</p>
                     </div>
 
-                                        <div class="detail-section">
+                    <div class="detail-section">
                         <h3>Réussites et défis</h3>
                         <p><strong>Points positifs :</strong></p>
                         <ul>
@@ -134,31 +131,6 @@
                     </div>
                 </article>
 
-                <article class="experience-card experience-detail" id="experience-projets-persos">
-                    <h2>Projets personnels – Programmation &amp; jeux vidéo</h2>
-                    <p class="experience-date">Depuis 2023</p>
-                    <p class="detail-intro">Réalisation de projets personnels autour de la programmation et de la personnalisation de jeux vidéo, notamment Minecraft. Ces expériences m’ont permis d’expérimenter le fonctionnement interne d’applications complexes et de renforcer ma logique informatique.</p>
-
-                    <div class="detail-section">
-                        <h3>Projets réalisés</h3>
-                        <ul>
-                            <li>Création et personnalisation de modules Java pour Minecraft.</li>
-                            <li>Exploration du fonctionnement des API et de la communication client-serveur.</li>
-                            <li>Développement d’outils d’automatisation et de scripts d’aide au jeu.</li>
-                        </ul>
-                    </div>
-
-                    <div class="detail-section">
-                        <h3>Compétences développées</h3>
-                        <ul>
-                            <li>Programmation orientée objet (Java, Python).</li>
-                            <li>Analyse et compréhension de systèmes complexes.</li>
-                            <li>Autonomie, curiosité et apprentissage autodidacte.</li>
-                        </ul>
-                    </div>
-
-                    <p class="detail-conclusion">Ces projets m’ont donné le goût de comprendre comment les applications fonctionnent “sous le capot” et m’ont poussé à approfondir mes connaissances en développement et sécurité informatique.</p>
-                </article>
 
                 <article class="experience-card large" id="experience-cineclub">
                     <div class="experience-images">
@@ -234,6 +206,34 @@
                         <p class="detail-highlight">Expérience formatrice qui a renforcé ma motivation à poursuivre dans les domaines des réseaux, de la cybersécurité et du développement système.</p>
                     </div>
                 </article>
+
+
+                <article class="experience-card experience-detail" id="experience-projets-persos">
+                    <h2>Projets personnels – Programmation &amp; jeux vidéo</h2>
+                    <p class="experience-date">Depuis 2023</p>
+                    <p class="detail-intro">Réalisation de projets personnels autour de la programmation et de la personnalisation de jeux vidéo, notamment Minecraft. Ces expériences m’ont permis d’expérimenter le fonctionnement interne d’applications complexes et de renforcer ma logique informatique.</p>
+
+                    <div class="detail-section">
+                        <h3>Projets réalisés</h3>
+                        <ul>
+                            <li>Création et personnalisation de modules Java pour Minecraft.</li>
+                            <li>Exploration du fonctionnement des API et de la communication client-serveur.</li>
+                            <li>Développement d’outils d’automatisation et de scripts d’aide au jeu.</li>
+                        </ul>
+                    </div>
+
+                    <div class="detail-section">
+                        <h3>Compétences développées</h3>
+                        <ul>
+                            <li>Programmation orientée objet (Java, Python).</li>
+                            <li>Analyse et compréhension de systèmes complexes.</li>
+                            <li>Autonomie, curiosité et apprentissage autodidacte.</li>
+                        </ul>
+                    </div>
+
+                    <p class="detail-conclusion">Ces projets m’ont donné le goût de comprendre comment les applications fonctionnent “sous le capot” et m’ont poussé à approfondir mes connaissances en développement et sécurité informatique.</p>
+                </article>
+
             </div>
         </div>
     </section>
