--- a/formations.html
+++ b/formations.html
@@ -10,19 +10,14 @@
     <nav class="detail-page-nav">
         <div class="nav-item">
             <a class="back-link" href="index.html">Accueil</a>
-            <div class="nav-submenu">
-                <a href="index.html#formation">Formation & diplômes</a>
-                <a href="index.html#experiences">Aperçu expériences</a>
-                <a href="index.html#competences">Compétences & contact</a>
-            </div>
         </div>
         <div class="nav-item">
             <a class="back-link" href="experiences.html">Expériences</a>
             <div class="nav-submenu">
-                <a href="experiences.html#experience-api-arte">Job API</a>
+                <a href="experiences.html#experience-api-arte">Job Étudiant</a>
                 <a href="experiences.html#experience-projets-persos">Projets personnels</a>
                 <a href="experiences.html#experience-cineclub">Ciné-club</a>
-                <a href="experiences.html#experience-42">Piscine 42</a>
+                <a href="experiences.html#experience-42">Piscine école 42</a>
             </div>
         </div>
         <div class="nav-item">
@@ -35,6 +30,9 @@
                 <a href="#but2">Parcours Dev&nbsp;Cloud</a>
                 <a href="#objectifs">Objectifs futurs</a>
             </div>
+        </div>
+        <div class="nav-item">
+            <a class="back-link" href="contact.html">Contact</a>
         </div>
     </nav>
     <section class="section-formation detail-page with-fixed-nav">
