--- a/index.html
+++ b/index.html
@@ -10,19 +10,14 @@
     <nav class="detail-page-nav">
         <div class="nav-item">
             <a class="back-link" href="index.html">Accueil</a>
-            <div class="nav-submenu">
-                <a href="index.html#formation">Formation & diplômes</a>
-                <a href="index.html#experiences">Aperçu expériences</a>
-                <a href="index.html#competences">Compétences & contact</a>
-            </div>
         </div>
         <div class="nav-item">
             <a class="back-link" href="experiences.html">Expériences</a>
             <div class="nav-submenu">
-                <a href="experiences.html#experience-api-arte">Job API</a>
+                <a href="experiences.html#experience-api-arte">Job Étudiant</a>
                 <a href="experiences.html#experience-projets-persos">Projets personnels</a>
                 <a href="experiences.html#experience-cineclub">Ciné-club</a>
-                <a href="experiences.html#experience-42">Piscine 42</a>
+                <a href="experiences.html#experience-42">Piscine école 42</a>
             </div>
         </div>
         <div class="nav-item">
@@ -35,6 +30,9 @@
                 <a href="formations.html#but2">Parcours Dev&nbsp;Cloud</a>
                 <a href="formations.html#objectifs">Objectifs futurs</a>
             </div>
+        </div>
+        <div class="nav-item">
+            <a class="back-link" href="contact.html">Contact</a>
         </div>
     </nav>
     <!-- Présentation -->
@@ -49,7 +47,7 @@
             <div class="text-box">
                 <h1>Louis Erb</h1>
                 <p class="subtitle">Étudiant en 1re année de BUT Réseaux et Télécommunications</p>
-                <p>Je m'apple Louis ERB, je suis né le 31 octobre 2007 à Schiltigheim (Bas-Rhin), de nationalité franco-suisse. Au départ il y a eu les jeux sur mon PC, et petit à petit j’ai développé un véritable intérêt pour l’informatique. Mes stages en entreprise ainsi que les projets menés au lycée ont confirmé cette passion. L’école 42 a aussi attiré ma curiosité : j’y ai été admis après un mois intensif qui m’a donné de solides bases en programmation. J’ai finalement choisi l’IUT, où je développe des compétences en administration réseau, développement web et cybersécurité. Je suis également investi dans le milieu associatif. Pour en découvrir plus, je vous invite à explorer ce site.</p>
+                <p>Je suis né le 31 octobre 2007 à Schiltigheim (Bas-Rhin), de nationalité franco-suisse. Au départ il y a eu les jeux sur mon PC, et petit à petit j’ai développé un véritable intérêt pour l’informatique. Mes stages en entreprise ainsi que les projets menés au lycée ont confirmé cette passion. L’école 42 a aussi attiré ma curiosité : j’y ai été admis après un mois intensif qui m’a donné de solides bases en programmation. J’ai finalement choisi l’IUT, où je développe des compétences en administration réseau, développement web et cybersécurité. Je suis également investi dans le milieu associatif. Pour en découvrir plus, je vous invite à explorer ce site.</p>
                 <p class="location-link">Basé à <a href="https://maps.google.com/?q=Mulhouse" target="_blank" rel="noreferrer">Mulhouse</a>, originaire de Strasbourg · Mobile dans tout le Grand Est</p>
             </div>
         </div>
@@ -171,8 +169,8 @@
                 <article class="experience-card large">
                     <div class="experience-images">
                         <img class="exp-img top" src="image/ARTE1.jpg" alt="Illustration expérience haut" />
-                        <img class="exp-img middle" src="image/ARTE2.png" alt="Illustration expérience milieu" />
-                        <img class="exp-img bottom" src="image/ARTE3.png" alt="Illustration expérience bas" />
+                        <img class="exp-img middle" src="image/ARTE2.jpeg" alt="Illustration expérience milieu" />
+                        <img class="exp-img bottom" src="image/ARTE3.jpeg" alt="Illustration expérience bas" />
                     </div>
                     <div class="experience-content">
                         <h3>Job Étudiant - API</h3>
@@ -208,34 +206,39 @@
     <section id="competences" class="section-competences section-duo">
         <div class="container">
             <div class="duo-panels">
-                <div class="panel panel-competences">
+                                <div class="panel panel-competences">
                     <h2>Compétences</h2>
                     <div class="flex-competences">
                         <div class="competence-card">
-                            <h3>Compétences Réseaux & Télécoms</h3>
+                            <h3>Compétences techniques / informatiques</h3>
                             <ul>
-                                <li>Configuration de routeurs et commutateurs</li>
-                                <li>Services d'annuaire et supervision</li>
-                                <li>Virtualisation et segmentation réseau</li>
-                                <li>Respect des bonnes pratiques de sécurité</li>
-                            </ul>
-                        </div>
-                        <div class="competence-card">
-                            <h3>Compétences Techniques</h3>
-                            <ul>
+                                <li>Programmation orientée objet (Java, Python, C)</li>
                                 <li>Développement web (HTML, CSS, JavaScript)</li>
-                                <li>Scripts Python pour l’automatisation</li>
-                                <li>Bases de données MySQL</li>
-                                <li>Docker, Git et intégration continue</li>
+                                <li>Scripts d'automatisation (Bash, Python)</li>
+                                <li>Administration Linux / Windows</li>
+                                <li>Configuration et gestion de réseaux (routeurs, VLAN, supervision)</li>
+                                <li>Déploiement et gestion de services cloud (Docker, CI/CD, Infrastructure as Code)</li>
+                                <li>Sécurité informatique et durcissement des systèmes</li>
                             </ul>
                         </div>
                         <div class="competence-card">
-                            <h3>Compétences Humaines</h3>
+                            <h3>Compétences organisationnelles & méthodologie</h3>
                             <ul>
-                                <li>Communication claire et vulgarisation</li>
-                                <li>Travail en équipe et pair-programming</li>
+                                <li>Gestion de projets techniques et travail en équipe</li>
+                                <li>Autonomie et sens des responsabilités</li>
+                                <li>Planification et organisation efficace des tâches</li>
+                                <li>Adaptation rapide à des environnements exigeants</li>
                                 <li>Gestion de la pression et des imprévus</li>
-                                <li>Organisation et sens du service</li>
+                            </ul>
+                        </div>
+                        <div class="competence-card">
+                            <h3>Compétences créatives & personnelles</h3>
+                            <ul>
+                                <li>Création de projets personnels (modules Minecraft, scripts, prototypes domotiques)</li>
+                                <li>Créativité et résolution de problèmes techniques</li>
+                                <li>Travail collaboratif et communication claire</li>
+                                <li>Endurance et sens du service (bûcheronnage, stages)</li>
+                                <li>Animation d'activités culturelles (ciné-club)</li>
                             </ul>
                         </div>
                     </div>
@@ -246,13 +249,13 @@
                         <div class="info-card">
                             <h3>Langues</h3>
                             <ul>
-                                <li>Français (natif)</li>
+                                <li>Français</li>
                                 <li>Anglais (B2)</li>
                                 <li>Allemand (A2)</li>
                             </ul>
                         </div>
                         <div class="info-card">
-                            <h3>Loisirs</h3>
+                            <h3><a class ="accent-link" href="contact.html#passions">Passions</a></h3>
                             <ul>
                                 <li>Marche à pieds</li>
                                 <li>Bûcheronnage</li>
@@ -263,7 +266,6 @@
                             <h3>Contact</h3>
                             <p>Email : louis.erb@outlook.fr</p>
                             <p>Tél : 06 81 61 63 05</p>
-                            <p>Nationalité : Franco-Suisse</p>
                         </div>
                     </div>
                 </div>
