--- a/experiences.html
+++ b/experiences.html
@@ -134,7 +134,7 @@
 
                 <article class="experience-card large" id="experience-cineclub">
                     <div class="experience-images">
-                        <img class="exp-img top" src="image/cine1.jpg" alt="Projection ciné-club" />
+                        <img class="exp-img top" src="image/Ciné1.jpg" alt="Projection ciné-club" />
                         <img class="exp-img middle" src="image/cine2.jpg" alt="Équipe du ciné-club" />
                         <img class="exp-img bottom" src="image/cine3.jpg" alt="Organisation d'une séance" />
                     </div>
